docs: record android final repair verification